k8s/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: my-application
  name: my-application
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      run: my-application
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: my-application
        group: the-services-services
    spec:
      affinity:
        # Prevent co-locating multiple my-application pods on the same node
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                run: my-application
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: my-application
        image: repository.local:8443/my-application:__IMAGE_VERSION__
        args:
        - -XX:+ExitOnOutOfMemoryError
        - -Xmx512m
        - --spring.profiles.active=kubernetes,dev,debug
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 30
          successThreshold: 1
          failureThreshold: 10
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 768Mi
      imagePullSecrets:
      - name: x-snapshot-pull
      nodeSelector:
        kops.k8s.io/instancegroup: nodes
      restartPolicy: Always
