k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-application
  name: my-application
  namespace: dev
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: my-application
